--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,26 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.virtusa.androidbootcamp"
-    android:versionCode="1"
-    android:versionName="1.0" >
+	package="com.virtusa.androidbootcamp" android:versionCode="1"
+	android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="8" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+	<uses-sdk android:minSdkVersion="8" />
 
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" android:debuggable="true">
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+	<uses-permission android:name="android.permission.INTERNET" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".PublicTimelineActivity"></activity>
-    </application>
+	<application android:debuggable="true" android:icon="@drawable/ic_launcher"
+		android:label="@string/app_name">
+		<activity android:name=".MainActivity" android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+		<activity android:name=".LoginActivity" android:label="Login to YAMBA" />
+
+		<activity android:name=".PublicTimelineActivity"
+			android:label="YAMBA public time line" />
+
+		<activity android:name="PrefsActivity" />
+
+	</application>
 
 </manifest>
