--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,12 +3,12 @@
 	package="com.virtusa.androidbootcamp" android:versionCode="1"
 	android:versionName="1.0">
 
-	<uses-sdk android:minSdkVersion="8" />
+	<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="15"/>
 
 	<uses-permission android:name="android.permission.INTERNET" />
 
 	<application android:debuggable="true" android:icon="@drawable/ic_launcher"
-		android:label="@string/app_name">
+		android:label="@string/app_name" android:name="YambaApplication" android:uiOptions="splitActionBarWhenNarrow">
 		<activity android:name=".MainActivity" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
