--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,12 +3,13 @@
 	package="com.virtusa.androidbootcamp" android:versionCode="1"
 	android:versionName="1.0">
 
-	<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="15"/>
+	<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="15" />
 
 	<uses-permission android:name="android.permission.INTERNET" />
 
 	<application android:debuggable="true" android:icon="@drawable/ic_launcher"
-		android:label="@string/app_name" android:name="YambaApplication" android:uiOptions="splitActionBarWhenNarrow">
+		android:label="@string/app_name" android:name="YambaApplication"
+		android:uiOptions="splitActionBarWhenNarrow" android:enabled="true">
 		<activity android:name=".MainActivity" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -22,6 +23,9 @@
 			android:label="YAMBA public time line" />
 
 		<activity android:name="PrefsActivity" />
+		<service android:name="UpdateService" />
+		<service android:name="UpdateService2" />
+		<provider android:authorities="com.marakana.android.yamba" android:name="StatusProvider"></provider>
 
 	</application>
 
